# robot_simulation

./: CMakeLists.txt  README.md  data.txt  package.xml
config/: control_params.yaml  joystick_params.yaml  mapper_params.yaml  nav2_params.yaml
description/: robot.xacro  robot_simulation.xacro
launch/: joy_control_launch.py  localization_launch.py  robot_simulation.py  rosbridge_websocket_launch.xml  rviz_launch.py
map/: map_simulation.pgm  map_simulation.yaml
robot_simulation/: can_setup.py  pid.py  robot.py
rviz/: view_bot.rviz
scripts/: node_maker.py  omni_controller.py  path_tracking.cpp  path_tracking.py  test.py  tracker.py
scripts/gazebo_ros_omni_drive/: gazebo_ros_omni_drive.cpp  gazebo_ros_omni_drive.hpp
scripts/tracker/: trajectory_tracking.cpp
